--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,5 +17,5 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PIGMENTARA }}
-          projectId: pigmentara
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PIGMENTARAPP }}
+          projectId: pigmentarapp
