--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,7 @@
   "functions": [
     {
       "source": "functions",
+      "runtime": "nodejs18",
       "codebase": "default",
       "ignore": [
         "node_modules",
@@ -17,7 +18,7 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
+        /*"npm --prefix \"$RESOURCE_DIR\" run lint",*/
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
