--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,12 @@
 {
   "name": "functions",
+  "version": "0.0.0",
+  "engines": {
+    "node": "18"
+
+  },
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint --ext .js,.ts src",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
@@ -9,9 +14,6 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
-  },
-  "engines": {
-    "node": "22"
   },
   "main": "lib/index.js",
   "dependencies": {
